# TimeSharingSimulation

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  input.txt
include/: circularLinkedList.hpp  circular_linked_list.hpp  cpu.hpp  io.hpp  process.hpp  types.hpp
src/: cpu.cpp  io.cpp  main.cpp
